@@ -1,3 +1,6 @@
+[30.January 2009]
+- gfx/fireball.png: replaced by nogath's
+
 [29.January 2009]
 - gfx/fireball.png, gfx/stone_fireballspitter.png,
   entities/fireball.png, entities/fireballspitter.rb,
